@@ -27,6 +27,8 @@
       qstat -a <queue1> <queue2>
   e - Added patch to buildutils/pbs_mkdirs.in which enables pbs_mkdirs to run
       silently. Patch submitted by Bas van der Vlies. Bugzilla 199.
+  b - fix an error in parsing environment variables with commas, newlines, etc. TRQ-1113
+      (backported from 4.1.1)
 
 4.0.2
   e - Change so init.d script variables get set based on the configure command.
